# mockgals

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  defaults.ac  mock.fits  mock.txt
doc/: README.md  addscripttohtmlhead  correctindextop  makerunrequirements.sh  mockgals.info  mockgals.texinfo  mockgals.txt  mockgals.xml  run.sh
doc/ForPlots/LaTeX/: Plots.tex  run.sh
doc/ForPlots/LaTeX/BaseFiles/: MoffatGaussianComp.tex  MoffatGaussianComp.txt
doc/ForPlots/Programs/: PSFComp.c
doc/MakingPlots/GIFs/IntegPixFill/: OnlyToSeeTheGIF.html  makegif.sh
doc/MakingPlots/GIFs/PixbyPixFill/: OnlyToSeeTheGIF.html  makegif.sh
doc/MakingPlots/GIFs/RestPixFill/: OnlyToSeeTheGIF.html  makegif.sh
doc/MakingPlots/LaTeX/: Plots.tex  ref.bib  run.sh
doc/MakingPlots/LaTeX/BaseFiles/: SersicComp.tex  SersicComp.txt  checkinteg.tex  checkinteg.txt  checkinteg2.txt  checkintegall.txt  checkintegcent.txt  checkintegcircall.txt  checkintegcirccent.txt  checkintegq65all.txt  checkintegq65cent.txt  integpixfill.tex  pixfill.tex
doc/MakingPlots/LaTeX/BaseFiles/CheckInteg/: q1_all.txt  q1_in.txt  q25_all.txt  q25_in.txt  q60_all.txt  q60_in.txt
doc/MakingPlots/LaTeX/BaseFiles/IntegPixfill/: centinteg.fits  makejpg.sh
doc/MakingPlots/LaTeX/BaseFiles/RestPixfill/: FindingTheFITS  makejpg.sh
doc/MakingPlots/LaTeX/BaseFiles/pixfill/: makejpg.sh  tmp.fits
doc/MakingPlots/Programs/: PSFComp.sh  SersicComp.c  SersicComp.sh
doc/docsrc/: addjavascript.c  addscripttohtmlhead.c  correctindextop.c  formath.texi  generalmacros.texi  gpl_v3.texi  htmlheaderscript.txt  javascripts.txt  manualstyle.css  mockgals.texinfo  version.texi
doc/mockgals-figures/: s1.sh  s1_mockinfo.txt  s1_original.fits
src/: Makefile.am  Makefile.in  argpparser.h  arraymanip.c  arraymanip.h  attaavv.c  attaavv.h  basic.sh  convolve.c  convolve.h  fitsarrayvv.c  fitsarrayvv.h  forqsort.c  forqsort.h  freqdomain.c  freqdomain.h  integtwod.c  integtwod.h  macrofunctions.h  main.c  main.h  mock.c  mock.h  pix.c  pix.h  profiles.c  profiles.h  raddist.c  raddist.h  rand.c  rand.h  sll.c  sll.h  stats.c  stats.h  testinfo.txt  ui.c  ui.h
