## Process this file with automake to produce Makefile.in
##
## Hand written file: used as input into Autotools.
##
## This file will be called by the Makefile.am in the top directory,
## so this file does not need to be called directly by automake to
## make the full MockGals package.
##
## This is the automake instructions to build MockGals. Using an input
## catalog of mock galaxies, MockGals will build an image of the
## galaxies in a FITS image. It is free software released under GNU
## GPLv3+.
##
## Copyright (C) 2014 Mohammad Akhlaghi
## Tohoku University Astronomical Institute, Sendai, Japan.
## http://astr.tohoku.ac.jp/~akhlaghi/

SUBDIRS = src

dist_doc_DATA = README

EXTRA_DIST = defaults.ac src/basic.sh src/testinfo.txt
